--- a/MiniProjet-IA/templates/welcome.html
+++ b/MiniProjet-IA/templates/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Détection de Couleurs - IA</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="welcome.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -59,6 +59,6 @@
         </footer>
     </div>
 
-    <script src="script1.js"></script>
+    <script src="welcome.js"></script>
 </body>
 </html>
